--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
                 </exclusion>
             </exclusions>
 		</dependency>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib-nodep</artifactId>
+			<version>3.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
